--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule ".vim/bundle/vim-alignta"]
 	path = .vim/bundle/vim-alignta
 	url = git://github.com/h1mesuke/vim-alignta.git
+[submodule ".vim/bundle/omniperl"]
+	path = .vim/bundle/omniperl
+	url = git://github.com/vim-scripts/omniperl.git
