--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule ".vim/bundle/omniperl"]
 	path = .vim/bundle/omniperl
 	url = git://github.com/vim-scripts/omniperl.git
+[submodule ".vim/bundle/ShowMarks"]
+	path = .vim/bundle/ShowMarks
+	url = git://github.com/vim-scripts/ShowMarks.git
