--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule ".vim/bundle/ShowMarks"]
 	path = .vim/bundle/ShowMarks
 	url = git://github.com/vim-scripts/ShowMarks.git
+[submodule ".vim/bundle/cecutil"]
+	path = .vim/bundle/cecutil
+	url = git://github.com/vim-scripts/cecutil.git
