--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule ".vim/bundle/cecutil"]
 	path = .vim/bundle/cecutil
 	url = git://github.com/vim-scripts/cecutil.git
+[submodule ".vim/bundle/SuperTab"]
+	path = .vim/bundle/SuperTab
+	url = git://github.com/vim-scripts/SuperTab-continued..git
