--- a/.vimperatorrc
+++ b/.vimperatorrc
@@ -49,7 +49,7 @@ hi Hint <<EOC
     z-index:5000;
 EOC
 " ヒント文字列を変更する。(Vimperatorスレ301)
-set hintchars=qxcvl@;:/.,
+set hintchars=qxcvl@;:/.
 
 set verbose=1
 javascript <<EOM
