--- a/.xmobarrc
+++ b/.xmobarrc
@@ -3,7 +3,7 @@ Config { font = "xft:Sans-9:bold"
     , fgColor = "grey"
     , position = Top
     , lowerOnStart = False
-    , commands = [ Run Weather "EGPF" ["-t","<station>: <tempC>C","-L","18","-H","25","--normal","green","--high","red","--low","lightblue"] 36000
+    , commands = [ Run Weather "RJTT" ["-t","<station>: <tempC>C","-L","18","-H","25","--normal","green","--high","red","--low","lightblue"] 36000
         , Run Network "eth0" ["-L","0","-H","32","--normal","green","--high","red"] 10
         , Run Network "eth1" ["-L","0","-H","32","--normal","green","--high","red"] 10
         , Run Cpu ["-L","3","-H","50","--normal","green","--high","red"] 10
@@ -15,5 +15,5 @@ Config { font = "xft:Sans-9:bold"
         ]
     , sepChar = "%"
     , alignSep = "}{"
-    , template = "%cpu% | %memory% * %swap% | %eth0% - %eth1% } %StdinReader% { <fc=#ee9a00>%date%</fc>| %EGPF% | %uname%"
+    , template = "%cpu% | %memory% * %swap% | %eth0% - %eth1% } %StdinReader% { <fc=#ee9a00>%date%</fc> | %RJTT% | %uname%"
     }
