--- a/.gitmodules
+++ b/.gitmodules
@@ -49,3 +49,6 @@
 [submodule ".vim/bundle/unite-outline"]
 	path = .vim/bundle/unite-outline
 	url = git://github.com/h1mesuke/unite-outline.git
+[submodule ".vim/vundle.git"]
+	path = .vim/vundle.git
+	url = git://github.com/gmarik/vundle.git
