--- a/.tmux.conf
+++ b/.tmux.conf
@@ -19,7 +19,11 @@ set-option default-shell /bin/zsh # gentoo
 
 # status bar ============================================== {{{
 # 10秒毎に表示を更新。
-set-option -g  status-interval 10
+set-option -g status-interval 10
+set-option -g status-left-length 60
+set-option -g status-justify centre
+set-option -g status-left  "[#S/#I:#P] #W"
+set-option -g status-right "%Y/%m/%d %H:%M:%S %a"
 # }}}
 
 # terminal (256 colors) =================================== {{{
