status lineの設定を變更。

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -55,9 +55,10 @@ set-option default-shell /bin/zsh # gentoo
 # status bar ============================================== {{{
 # 10秒毎に表示を更新。
 set-option -g status-interval 10
-set-option -g status-left-length 60
+set-option -g status-left-length  40
+set-option -g status-right-length 40
 set-option -g status-justify centre
-set-option -g status-left  "[#S/#I:#P] #W"
+set-option -g status-left  "#S/#I:#W/#P:#T"
 set-option -g status-right "%b %d / %R"
 # }}}
 
