単語の区切り文字を追加。

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -46,6 +46,7 @@ set-window-option -g pane-base-index 1
 # copy mode =============================================== {{{
 bind -r ^[ copy-mode
 bind -r ^] paste-buffer
+set-option -g word-separators " -_@'\",./:;"
 # }}}
 
 # shell =================================================== {{{
