join-paneを割りあて。

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -41,6 +41,7 @@ bind-key C-t send-prefix
 
 # pane ==================================================== {{{
 set-window-option -g pane-base-index 1
+bind-key j command-prompt -p index "join-pane -t ':%%'"
 # }}}
 
 # copy mode =============================================== {{{
