ウィンドウを入れ替えるキーを割当て。

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -45,13 +45,13 @@ bind-key j command-prompt -p index "join-pane -t ':%%'"
 # }}}
 
 # copy mode =============================================== {{{
-bind -r ^[ copy-mode
-bind -r ^] paste-buffer
+bind-key -r ^[ copy-mode
+bind-key -r ^] paste-buffer
 set-option -g word-separators " -_@'\",./:;"
 # }}}
 
 # shell =================================================== {{{
-set-option default-shell /bin/zsh # gentoo
+set-option default-shell zsh
 # }}}
 
 # status bar ============================================== {{{
@@ -76,8 +76,11 @@ set-window-option -g utf8 on
 
 # vi ====================================================== {{{
 set-window-option -g mode-keys vi
+# }}}
 
 # window ================================================== {{{
+bind-key -r < swap-window -t -1
+bind-key -r > swap-window -t +1
 set-option -g base-index 1
 set-window-option -g allow-rename off
 set-window-option -g automatic-rename off
