--- a/.tmux.conf
+++ b/.tmux.conf
@@ -51,7 +51,7 @@ set-option -g word-separators " -_@'\",./:;"
 # }}}
 
 # shell =================================================== {{{
-set-option default-shell ~/.local/bin/zsh
+set-option default-shell ~/local/bin/zsh
 # }}}
 
 # status bar ============================================== {{{
