コピーモード時、選択開始及び終了のキーをvim風に。

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -47,6 +47,10 @@ bind-key j command-prompt -p index "join-pane -t ':%%'"
 # copy mode =============================================== {{{
 bind-key -r ^[ copy-mode
 bind-key -r ^] paste-buffer
+# http://d.hatena.ne.jp/tokorom/20110321/1300699319
+bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy y copy-selection
+#
 set-option -g word-separators " -_@'\",./:;"
 # }}}
 
