default-shellの設定を削除。(環境変数SHELLで行う)

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -33,17 +33,6 @@ set-option -g display-panes-colour colour166 #orange
 set-window-option -g clock-mode-colour colour64 #green
 # }}}
 
-# prefix key ============================================== {{{
-set-option -g prefix C-t
-unbind-key C-b
-bind-key C-t send-prefix
-# }}}
-
-# pane ==================================================== {{{
-set-window-option -g pane-base-index 1
-bind-key j command-prompt -p index "join-pane -t ':%%'"
-# }}}
-
 # copy mode =============================================== {{{
 bind-key -r ^[ copy-mode
 bind-key -r ^] paste-buffer
@@ -54,8 +43,19 @@ bind-key -t vi-copy y copy-selection
 set-option -g word-separators " -_@'\",./:;"
 # }}}
 
+# pane ==================================================== {{{
+set-window-option -g pane-base-index 1
+bind-key j command-prompt -p index "join-pane -t ':%%'"
+# }}}
+
+# prefix key ============================================== {{{
+set-option -g prefix C-t
+unbind-key C-b
+bind-key C-t send-prefix
+# }}}
+
 # shell =================================================== {{{
-set-option default-shell ~/local/bin/zsh
+#set-option -g default-shell ~/local/bin/zsh
 # }}}
 
 # status bar ============================================== {{{
