--- a/.tmux.conf
+++ b/.tmux.conf
@@ -54,6 +54,11 @@ unbind-key C-b
 bind-key C-t send-prefix
 # }}}
 
+# log ===================================================== {{{
+bind-key H pipe-pane 'mkdir -p $HOME/.tmux; cat >> $HOME/.tmux/tmux-#I-#W-`date "+%Y%m%d-%H%M%S"`.log' \; display-message 'Started logging to $HOME/.tmux/tmux-#I-#W.log'
+bind-key h pipe-pane \; display-message 'Ended logging to $HOME/.tmux/tmux-#I-#W.log'
+# }}}
+
 # shell =================================================== {{{
 #set-option -g default-shell ~/local/bin/zsh
 # }}}
