--- a/.tmux.conf
+++ b/.tmux.conf
@@ -76,6 +76,11 @@ set-option -g status-right "%b %d / %R"
 # terminal (256 colors) =================================== {{{
 #set-window-option -g xterm-key on
 set-option -g default-terminal "screen-256color"
+
+# minttyでtmuxをattachしたときに「1;2c」が印字される不具合囘避。(da-response)
+# http://code.google.com/p/mintty/wiki/PuttyIssues
+# http://sourceforge.net/p/tmux/mailman/message/29102917/
+set-option -g terminal-overrides "*88col*:colors=88,*256col*:colors=256,xterm*:XT"
 # }}}
 
 # UTF-8 =================================================== {{{
