設定を間違へてゐた。

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -80,7 +80,7 @@ set-option -g default-terminal "screen-256color"
 # minttyでtmuxをattachしたときに「1;2c」が印字される不具合囘避。(da-response)
 # http://code.google.com/p/mintty/wiki/PuttyIssues
 # http://sourceforge.net/p/tmux/mailman/message/29102917/
-set-option -g terminal-overrides "*88col*:colors=88,*256col*:colors=256,xterm*:XT"
+set-option -g terminal-overrides "*88col*:colors=88,*256col*:colors=256,xterm*:XT@"
 # }}}
 
 # UTF-8 =================================================== {{{
