tmux内で動作するアプリケーションに代替畫面バッファを提供しない。
http://doda.b.sourceforge.jp/2013/01/02/代替画面バッファ-1/

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -81,6 +81,10 @@ set-option -g default-terminal "screen-256color"
 # http://code.google.com/p/mintty/wiki/PuttyIssues
 # http://sourceforge.net/p/tmux/mailman/message/29102917/
 set-option -g terminal-overrides "*88col*:colors=88,*256col*:colors=256,xterm*:XT@"
+
+# tmux内で動作するアプリケーションに代替畫面バッファを提供しない。
+# http://doda.b.sourceforge.jp/2013/01/02/代替画面バッファ-1/
+set-window-option -g alternate-screen off
 # }}}
 
 # UTF-8 =================================================== {{{
