pecoでtmuxのウィンドウを絞り込む。
http://d.hatena.ne.jp/sugyan/20140611/1402487717

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -99,6 +99,7 @@ set-window-option -g mode-keys vi
 # window ================================================== {{{
 bind-key -r < swap-window -t -1
 bind-key -r > swap-window -t +1
+bind-key b split-window "tmux list-windows -F '#{window_index} #{window_name} #{?window_active,active,}' | awk '!/ active$/ { print }' | peco | sed -e 's/ .*//' | xargs tmux select-window -t"
 set-option -g base-index 1
 set-window-option -g allow-rename off
 set-window-option -g automatic-rename off
