[tmux] クリップボード共有

--- a/resources/tmux.conf
+++ b/resources/tmux.conf
@@ -34,11 +34,13 @@ set-window-option -g clock-mode-colour colour64 #green
 # }}}
 
 # copy mode =============================================== {{{
-bind-key -r ^[ copy-mode
-bind-key -r ^] paste-buffer
 # http://d.hatena.ne.jp/tokorom/20110321/1300699319
 bind-key -t vi-copy v begin-selection
 bind-key -t vi-copy y copy-selection
+# `tmux` のコピペとクリップボードの連携
+if "which xsel" "bind-key -t vi-copy y     copy-pipe 'xsel -bi'"
+if "which xsel" "bind-key -t vi-copy Enter copy-pipe 'xsel -bi'"
+if "which xsel" "bind-key ] run 'tmux set-buffer -- \"$(xsel -bo)\"; tmux paste-buffer'"
 #
 set-option -g word-separators " -_@'\",./:;"
 # }}}
