[tmux] `pbcopy` と `pbpaste` に対応

--- a/resources/tmux.conf
+++ b/resources/tmux.conf
@@ -38,9 +38,14 @@ set-window-option -g clock-mode-colour colour64 #green
 bind-key -t vi-copy v begin-selection
 bind-key -t vi-copy y copy-selection
 # `tmux` のコピペとクリップボードの連携
+# Linux with xsel
 if "which xsel" "bind-key -t vi-copy y     copy-pipe 'xsel -bi'"
 if "which xsel" "bind-key -t vi-copy Enter copy-pipe 'xsel -bi'"
 if "which xsel" "bind-key ] run 'tmux set-buffer -- \"$(xsel -bo)\"; tmux paste-buffer'"
+# Mac
+if "which pbcopy"  "bind-key -t vi-copy y     copy-pipe 'pbcopy'"
+if "which pbcopy"  "bind-key -t vi-copy Enter copy-pipe 'pbcopy'"
+if "which pbpaste" "bind-key ] run 'tmux set-buffer -- \"$(pbpaste)\"; tmux paste-buffer'"
 #
 set-option -g word-separators " -_@'\",./:;"
 # }}}
