--- a/resources/tmux.conf
+++ b/resources/tmux.conf
@@ -42,6 +42,9 @@ bind-key -t vi-copy y copy-selection
 if "which xsel" "bind-key -t vi-copy y     copy-pipe 'xsel -bi'"
 if "which xsel" "bind-key -t vi-copy Enter copy-pipe 'xsel -bi'"
 if "which xsel" "bind-key ] run 'tmux set-buffer -- \"$(xsel -bo)\"; tmux paste-buffer'"
+if-shell '[[ -x $GOPATH/bin/lemonade ]]' 'bind-key -t vi-copy y     copy-pipe "$GOPATH/bin/lemonade copy"'
+if-shell '[[ -x $GOPATH/bin/lemonade ]]' 'bind-key -t vi-copy Enter copy-pipe "$GOPATH/bin/lemonade copy"'
+if-shell '[[ -x $GOPATH/bin/lemonade ]]' 'bind-key ]  run-shell "$GOPATH/bin/lemonade paste | tmux load-buffer -" \; paste-buffer'
 # Mac
 if "which pbcopy"  "bind-key -t vi-copy y     copy-pipe 'pbcopy'"
 if "which pbcopy"  "bind-key -t vi-copy Enter copy-pipe 'pbcopy'"
